// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HeaderTop component > renders with breadcrumbs 1`] = `
<div>
  <div
    class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular header-top css-18g0gg-MuiToolbar-root"
  >
    <div
      class="MuiContainer-root MuiContainer-disableGutters css-1aa3h9d-MuiContainer-root"
    >
      <div
        class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-12ng94v-MuiGrid2-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-1e5alfj-MuiGrid2-root"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1ruuf8c-MuiTypography-root-MuiLink-root"
            href="https://www.skde.no/"
          >
            <img
              alt="SKDE logo"
              class="css-tkwvp9"
              src="/img/logos/logo-skde.svg"
            />
          </a>
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-5glywb-MuiGrid2-root"
        >
          <nav
            aria-label="breadcrumb"
            class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-8yvas4-MuiTypography-root-MuiBreadcrumbs-root"
          >
            <ol
              class="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
            >
              <li
                class="MuiBreadcrumbs-li"
              >
                <a
                  class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-fwszl2-MuiTypography-root-MuiLink-root"
                  href="/"
                >
                  Home
                </a>
              </li>
              <li
                aria-hidden="true"
                class="MuiBreadcrumbs-separator css-1wuw8dw-MuiBreadcrumbs-separator"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mnw9h2-MuiSvgIcon-root"
                  data-testid="NavigateNextRoundedIcon"
                  focusable="false"
                  font-weight="bold"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M9.31 6.71c-.39.39-.39 1.02 0 1.41L13.19 12l-3.88 3.88c-.39.39-.39 1.02 0 1.41s1.02.39 1.41 0l4.59-4.59c.39-.39.39-1.02 0-1.41L10.72 6.7c-.38-.38-1.02-.38-1.41.01"
                  />
                </svg>
              </li>
              <li
                class="MuiBreadcrumbs-li"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1f6v1q3-MuiTypography-root"
                >
                  About
                </p>
              </li>
            </ol>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HeaderTop component > renders with maxWidth prop 1`] = `
<div>
  <div
    class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular header-top css-18g0gg-MuiToolbar-root"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg MuiContainer-disableGutters css-ho17r4-MuiContainer-root"
    >
      <div
        class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-2 css-12ng94v-MuiGrid2-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-1e5alfj-MuiGrid2-root"
        >
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1ruuf8c-MuiTypography-root-MuiLink-root"
            href="https://www.skde.no/"
          >
            <img
              alt="SKDE logo"
              class="css-tkwvp9"
              src="/img/logos/logo-skde.svg"
            />
          </a>
        </div>
        <div
          class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-5glywb-MuiGrid2-root"
        >
          <nav
            aria-label="breadcrumb"
            class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-8yvas4-MuiTypography-root-MuiBreadcrumbs-root"
          >
            <ol
              class="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
            >
              <li
                class="MuiBreadcrumbs-li"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1f6v1q3-MuiTypography-root"
                >
                  Home
                </p>
              </li>
            </ol>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>
`;
